\name{NEWS}
\title{actuar News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.2-1}{
  \subsection{(MORE OR LESS) USER-VISIBLE CHANGES}{
    \itemize{
      \item ogive() lost its argument '...' as it was unused anyway.
      \item Usage of chkDots() (new in R 3.3.0) in a few methods that do
      not use the content of their '...' argument.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Deleted an unwanted debugging message ("local") printed by
      CTE() at every execution.
      \item predict.cm() and summary.cm() now treat the '...' argument
      as advertised in the help file.
    }
  }
  \subsection{MAINTENANCE}{
    \itemize{
      \item C-level function log1pexp(...) used in a few places in lieu
      of log1p(exp(...)).
      \item Names of the internal utility macros defined in dpq.h
      changed from "R_<...>" to "ACT_<...>" to make it clearer that they
      are defined by the package (although they were copied from R
      sources).
    }
  }
}

\section{CHANGES IN VERSION 1.2-0}{
  \subsection{NEW FEATURE}{
    \itemize{
      \item In the computation of the CTE in the Normal Power case,
      numerical integration has been replaced by the explicit formula given
      in Castañer, A.; Claramunt, M.M.; Mármol, M. (2013). Tail value at
      risk. An analysis with the Normal-Power approximation. In Statistical
      and Soft Computing Approaches in Insurance Problems. Nova Science
      Publishers. ISBN 978-1-62618-506-7.
    }
  }
}

\section{CHANGES IN VERSION 1.1-10}{
  \subsection{BUG FIX}{
    \itemize{
      \item Results of 'cm' for hierarchical models would get
      incorrectly sorted when there were 10 nodes or more at a given
      level. Thanks to Dylan Wienke \email{dwienke2@gmail.com} for the
      catch.
    }
  }
}

\section{CHANGES IN VERSION 1.1-9}{
  \subsection{MAINTENANCE}{
    \itemize{
      \item Functions 'head' and 'tail' explicitly imported from package